k8s/applications/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: web
      port: 8080
      targetPort: web
      protocol: TCP
