k8s/applications/media/qbittorrent/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - qbittorrent.smadja.dev
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
